[gd_scene load_steps=7 format=3 uid="uid://cwg3g1r4bxxm0"]

[ext_resource type="Script" path="res://menu.gd" id="1_4xx2o"]
[ext_resource type="Texture2D" uid="uid://4rj4yn6iuakb" path="res://Scenes/Backgrounds/solid-light-blue-background-53xkyn7gnrw2373e.jpg" id="2_ir47e"]
[ext_resource type="PackedScene" uid="uid://dy5caa0mf4mqb" path="res://Scenes/user settings screen/options_menu.tscn" id="3_kw1sd"]

[sub_resource type="SystemFont" id="SystemFont_ml8si"]
font_names = PackedStringArray("SimSun")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_75lln"]
font_names = PackedStringArray("SimSun")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_j7bib"]
font_names = PackedStringArray("SimSun")
subpixel_positioning = 0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4xx2o")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Solid-light-blue-background-53Xkyn7Gnrw2373e" type="Sprite2D" parent="TextureRect"]
position = Vector2(325.5, 182)
scale = Vector2(0.378646, 0.427778)
texture = ExtResource("2_ir47e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.074
anchor_top = -2.318
anchor_right = 2.164
anchor_bottom = 2.819
offset_left = 1744.79
offset_top = 1015.42
offset_right = -1166.08
offset_bottom = -863.351
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Pause" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 20
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = SubResource("SystemFont_ml8si")
theme_override_font_sizes/font_size = 75
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Seperator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_75lln")
theme_override_font_sizes/font_size = 30
text = "Resume"

[node name="Settings" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_j7bib")
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="Quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_j7bib")
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="Options_Menu" parent="." instance=ExtResource("3_kw1sd")]
visible = false
layout_mode = 1

[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/Resume" to="." method="_on_start_game_button_down"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/Settings" to="." method="_on_exit_game_button_down"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_settings_button_down"]
