[gd_scene load_steps=6 format=3 uid="uid://c0lwytkkfncny"]

[ext_resource type="Script" path="res://menu.gd" id="1_a11kk"]
[ext_resource type="PackedScene" uid="uid://cwwgdf2ykqb7p" path="res://Scenes/user settings screen/options_menu.tscn" id="3_snyir"]

[sub_resource type="SystemFont" id="SystemFont_ml8si"]
font_names = PackedStringArray("SimSun")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_75lln"]
font_names = PackedStringArray("SimSun")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_j7bib"]
font_names = PackedStringArray("SimSun")
subpixel_positioning = 0

[node name="Pause_Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a11kk")

[node name="TextureRect" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 224.155
offset_top = 17.2145
offset_right = 412.155
offset_bottom = 315.214
theme_override_constants/separation = 15

[node name="Pause" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 20
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = SubResource("SystemFont_ml8si")
theme_override_font_sizes/font_size = 75
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_75lln")
theme_override_font_sizes/font_size = 30
text = "Resume"

[node name="save" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_75lln")
theme_override_font_sizes/font_size = 30
text = "Save"

[node name="settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_j7bib")
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_j7bib")
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="Options_Menu" parent="." instance=ExtResource("3_snyir")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/resume" to="." method="_on_resume_pressed"]
